Chromad: Handle unknown error correctly on the login screen.

Fixes the problem with the bottom login header disappearing.

Bug: 769561
Change-Id: I0acd39df0177426ce98d38f480963d533739d5e4
Reviewed-on: https://chromium-review.googlesource.com/690324
Reviewed-by: Achuith Bhandarkar <achuith@chromium.org>
Commit-Queue: Roman Sorokin <rsorokin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505581}
Former-commit-id: 172b8cee10018e427265d17f8997fb0a9a730ff9